--- a/recipes/recipes.css
+++ b/recipes/recipes.css
@@ -5,9 +5,10 @@
 
 button {
     color: darkblue;
-    background-color: lightgreen;
-    font-size: 18px;
-    font-weight: bold;
+    background: none;
+    font-size: 22px;
+    
+    font-weight: 900;
     padding: 10px;
     margin: 20 px;
 }
